src/test/deca/syntax/invalid/invalidExtend.deca
// Description:
//    Class au lieu de class
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023

class A extends class B {

}


